# SDL_Snow

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  SDL_snow.sln  SDL_snow.vcxproj  SDL_snow.vcxproj.filters  vcpkg.json
.github/workflows/: ci.yml
src/: Snow.cpp  SnowSystem.cpp  SnowSystem.h
